# ts-experiments

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
piggies/: .gitignore  notebook-v2.ipynb  notebook.ipynb  pyproject.toml
piggies/lightning_logs/version_103/: hparams.yaml
piggies/lightning_logs/version_108/: hparams.yaml
piggies/lightning_logs/version_118/: hparams.yaml
piggies/lightning_logs/version_125/: hparams.yaml
piggies/lightning_logs/version_13/: hparams.yaml
piggies/lightning_logs/version_132/: hparams.yaml
piggies/lightning_logs/version_141/: hparams.yaml
piggies/lightning_logs/version_15/: hparams.yaml
piggies/lightning_logs/version_161/: hparams.yaml
piggies/lightning_logs/version_169/: hparams.yaml
piggies/lightning_logs/version_17/: hparams.yaml
piggies/lightning_logs/version_175/: hparams.yaml
piggies/lightning_logs/version_19/: hparams.yaml
piggies/lightning_logs/version_206/: hparams.yaml
piggies/lightning_logs/version_214/: hparams.yaml
piggies/lightning_logs/version_221/: hparams.yaml
piggies/lightning_logs/version_225/: hparams.yaml
piggies/lightning_logs/version_228/: hparams.yaml
piggies/lightning_logs/version_229/: hparams.yaml
piggies/lightning_logs/version_23/: hparams.yaml
piggies/lightning_logs/version_285/: hparams.yaml
piggies/lightning_logs/version_3/: hparams.yaml
piggies/lightning_logs/version_31/: hparams.yaml
piggies/lightning_logs/version_39/: hparams.yaml
piggies/lightning_logs/version_4/: hparams.yaml
piggies/lightning_logs/version_46/: hparams.yaml
piggies/lightning_logs/version_5/: hparams.yaml
piggies/lightning_logs/version_62/: hparams.yaml
piggies/lightning_logs/version_7/: hparams.yaml
piggies/lightning_logs/version_72/: hparams.yaml
piggies/lightning_logs/version_77/: hparams.yaml
piggies/lightning_logs/version_8/: hparams.yaml
piggies/lightning_logs/version_85/: hparams.yaml
piggies/lightning_logs/version_9/: hparams.yaml
piggies/lightning_logs/version_96/: hparams.yaml
piggies/src/ts_piggies/configs/: page.jinja.html
piggies/src/ts_piggies/data/: downloader.py  extract.py  model.py  pdf.py  timetable.py
piggies/src/ts_piggies/forecast/: abstract.py  grid.py  tft.py
piggies/src/ts_piggies/helpers/: scaler.py
