[tool.poetry]
name = "ts-experiments"
version = "0.1.0"
description = "Time series experiments"
authors = [
    "Elmorralito <drestrepohinc@gmail.com>"
]
readme = "README.md"
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
codon-jit = "^0.4.4"
ts-piggies = { path = "./piggies", develop = true }

[tool.poetry.group.pre-commit.dependencies]
black = "^24.4.2"
mypy = "^1.14.1"
pre-commit = "^3.7.1"
pylint = "^3.2.6"
flake8 = "^7.1.0"
isort = "^5.13.2"
pytest = "^9.0.2"
pytest-cov = "^5.0.0"
boto3-stubs = "^1.34.147"
build = "^1.2.2.post1"
types-pyyaml = "^6.0.12.20241230"
types-python-dateutil = "^2.9.0.20250516"
sqlfluff = "^3.4.0"
tabulate = "^0.9.0"
types-tabulate = "^0.9.0.20241207"
types-toml = "^0.10.8.20240310"
types-requests = "^2.32.4.20250913"
types-pytz = "^2025.2.0.20250809"
flake8-pyproject = "^1.2.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "dist",
    "*.ipynb",
    "tests/*",
]
max-line-length = 120
max-complexity = 18
