[project]
name = "ts-piggies"
version = "0.1.1"
description = "Time series piggies prices experiments"
authors = [
    {name = "Elmorralito",email = "drestrepohinc@gmail.com"}
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pandas >=2.3.3",
    "numpy >=2.4.0",
    "pydantic >=2.12.5",
    "requests >=2.32.5",
    "ipykernel >=7.1.0",
    "seaborn >=0.13.2",
    "torch (>=2.9.1,<3.0.0)",
    "lightning (>=2.6.0,<3.0.0)",
    "pypdf >=5.1.0",
    "pdfplumber >=0.11.0",
    "pytesseract >=0.3.13",
    "pillow >=11.0.0",
    "pdf2image >=1.17.0",
    "pyarrow >=19.0.1",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pytorch-forecasting (>=1.5.0,<2.0.0)",
]

[tool.poetry]
package-mode = true
packages = [
    { include = "ts_piggies", from = "src/" },
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
